Iris: fixed bug where assessment-review button in scores view did not work